# rustboy

./: .gitignore  Cargo.toml  LICENSE  README.MD  WinMergeU.exe.lnk  bgb.exe.lnk  get_trace_tetris.bat  rustboy-emu.sublime-project  rustboy-emu.sublime-workspace  serial_out.txt
bgb/: bgb.ini
captures/: capture1.sleepy
src/: cartridge.rs  cpu.rs  emulator.rs  gpu.rs  input.rs  logger.rs  main.rs  mmu.rs  timer.rs
src/cpu/: instructions.rs  mod.rs  opcodes.rs
