[package]
name = "rustboy-emu"
version = "0.1.0"
authors = ["VelocityRa <makren67@gmail.com>"]


[dependencies]
piston = "0.24.0"
piston_window = "*"
piston2d-graphics = "0.17.0"
piston2d-gfx_graphics = "*"
pistoncore-glutin_window = "*"
gfx = "0.12.0"
gfx_core = "*"
gfx_device_gl = "*"
gfx_text = "*"