[package]
name = "rustboy-emu"
version = "0.1.0"
authors = ["VelocityRa <makren67@gmail.com>"]


[dependencies]
piston = "*"
piston_window = "*"
piston2d-graphics = "*"
piston2d-gfx_graphics = "*" 
pistoncore-glfw_window = "*"
gfx = "*"
gfx_core = "*"
gfx_device_gl = "*"
gfx_text = "*"
image = "*"
piston-texture = "*"
rand = "*"